# message_queue

./: CMakeLists.txt  Node.h  Payload.h  Queue.h  main.cpp
.github/workflows/: ci.yml
tests/: QueueTest.cpp
